try to fix input sixe on iPhone

--- a/frontend/cocktails/src/styles/login.scss
+++ b/frontend/cocktails/src/styles/login.scss
@@ -82,6 +82,7 @@ input{
     background-color: #222;
     border-bottom: 1px solid #909090;
     color: #909090;
+    padding: 0;
 }
 
 .submit_button_wraper_login{
